fix: strictly parse log monitor configuration